@@ -4,7 +4,8 @@
     offset to the DARKTIME FITS keyword value under appropropriate
     date and supported subarray criteria.  The DARKTIME keyword value is 
     now the default scaling factor for the superdarks, with the offset 
-    being an additive correction to DARKTIME under appropriate circumstances.
+    being an additive correction to DARKTIME under appropriate circumstances
+    The offset only applies to WFC and HRC.
 
 ### 25-Sep-2019 - MDD -- Version 10.2.1
     CALACS has been modified to allow the PHOTMODE keyword to be updated with
